<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AttendApp</string>
    <string name="inputUsername">Username</string>
    <string name="inputPassword">Password</string>
    <string name="button_send">Login</string>
    <string name="button_register">Register</string>
    <string name="button_submit_attendance">Submit Attendance</string>

    <string name="attendance_recieved">Attendance Received</string>
    <string name="attendance_denied">Attendance Was not received</string>

    <string name="isTeacher">Are you a professor?</string>
    <string name="registerAccount">Register</string>
    <string name="inputPasswordCheck">Password (Check)</string>
    <string name="inputName">Input full name</string>

    <string name="start_attendance_period">Begin Attendance Period</string>
    <string name="request_class">Request Class</string>
    <string name="delete_class">Delete Class</string>
    <string name="get_attendance_records">Get/Display Attendance Record</string>

    <string name="time_in_minutes">Time (minutes)</string>
    <string name="beginAttendancePeriod">Begin period</string>
    <string name="cancelAttendancePeriod">Cancel period</string>
    <string name="create_class">Create Class</string>
    <string name="class_name">Class name</string>
    <string name="request_record">Request Record</string>
    <string name="place_your_file_into_the_folder_that_the_university_has_labeled_specify_the_class_name_exactly_minus_the_extention_and_press_the_button_to_create_the_class">Place your file into the folder that the University has labeled, specify the class name EXACTLY (Minus the extention), and press the button to create the class.</string>
    <string name="success">Success!</string>

</resources>