<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputUsername"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_width="200dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:hint="@string/inputPassword"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/passwordCheck"
        android:layout_below="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputPasswordCheck"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword" />

    <EditText android:id="@+id/fullName"
        android:layout_below="@+id/passwordCheck"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputName"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/isTeacher"
        android:id="@+id/isTeacher"
        android:layout_below="@+id/fullName"
        android:layout_alignLeft="@+id/fullName"
        android:layout_alignStart="@+id/fullName"
        android:layout_marginTop="19dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/registerAccount"
        android:id="@+id/createAccount"
        android:layout_below="@+id/isTeacher"
        android:layout_alignLeft="@+id/isTeacher"
        android:layout_alignStart="@+id/isTeacher"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/createAccount"
        android:layout_alignStart="@+id/createAccount"
        android:layout_marginBottom="40dp"
        android:id="@+id/registerText" />

</RelativeLayout>